<resources>
    <string name="app_name">BRS</string>
    <string name="heading">Bentley Ride Share</string>
    <string name="description"> </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="test">This is Test</string>
    <string name="signUpMessage"> New User </string>
    <string name="db_find">Find Carpool</string>
    <string name="db_make">Make Carpool</string>
    <string name="db_see">View Carpool</string>
    <string name="db_welcome"> <u>Welcome To Dashboard</u></string>
    <string name="fc_date">Please Enter Day: </string>
    <string name="fc_address">Address: </string>
    <string name="email">Email</string>
    <string name="cnfPassword">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="zipCode">Zip Code</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="state">State</string>
    <string name="serchRides">Search Rides</string>
    <string name="dateHint">Monday</string>
    <string name="showMapData">Click On The Icon To See Information</string>
    <string name="sendRequest"> Send Request</string>
</resources>
