<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pravasagar.brs.SignUp">
    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="none"
        android:text="@string/signUp"
        android:textColor="#0273C0"
        android:textIsSelectable="false"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:background="#0273C0"
        android:gravity="center_vertical|center_horizontal"
        android:padding="8dp"
        android:text="@string/signUp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/tvSignUp"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etUsername"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etEmail"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etCnfPassword"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etPassword"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/cnfPassword"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etFName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/etCnfPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/fname"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etPhone"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/street"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etStreet"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/city"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etZip"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etState"
        android:layout_margin="2sp"
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/zipCode"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etFName"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/lname"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etLName"
        android:layout_margin="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/phone"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etState"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/etFName"
        android:layout_below="@+id/etCity"
        android:layout_margin="2sp"
        android:layout_marginLeft="2sp"
        android:layout_marginRight="2sp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/state"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#0273C0"
        android:textColorHint="#0273C0"
        android:textSize="14sp" />

</RelativeLayout>
