<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pravasagar.brs.Dashboard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="#0273C0"
        android:textSize="28sp"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/see"
        android:text="@string/db_see"
        style="@style/dbTheme"
        android:onClick="seeCarpool" />
    <Button

        android:id="@+id/find"
        android:text="@string/db_find"
        style="@style/dbTheme"
        android:onClick="findCarpool" />
    <Button
        android:id="@+id/make"
        android:text="@string/db_make"
        style="@style/dbTheme"
        android:onClick="makeCarpool" />




</LinearLayout>
